Ultimas energias gastadas, a mimir porfin

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,12 +1,12 @@
 <div class="pagina">
-  <!-- Cambiamos el botón para que apunte a /registrar directamente -->
+  
   <div class="nav-buttons">
-    <button class="secundario" routerLink="/registrar">
+    <button class="secundario" (click)="irARegistrar()">
       Registrar encargado
     </button>
   </div>
 
-  <!-- Contenedor de organizaciones (igual que antes) -->
+ 
   <div class="organizaciones-container">
     <div
       class="card-org"
